# swagger/swagger.json
@@ -14,6 +14,10 @@
         }
     },
     "basePath": "/v1",
+    "schemes": [
+        "http",
+        "https"
+    ],
     "paths": {
         "/express/ebusinessOrderHandle": {
             "post": {
